CREATE EXTENSION IF NOT EXISTS pg_trgm;

CREATE TYPE book_status AS ENUM (
  'available',
  'loaned',
  'maintenance',
  'lost'
);

CREATE TYPE book_condition AS ENUM (
  'good',
  'average',
  'poor'
);

CREATE TABLE authors (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name VARCHAR(255) NOT NULL,
  created_at TIMESTAMPTZ NOT NULL DEFAULT (now())
);

CREATE TABLE books (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    isbn VARCHAR(255),
    title VARCHAR(255) NOT NULL,
    author_id INTEGER NOT NULL REFERENCES authors(id),
    description TEXT,
    publish_year INTEGER,
    edition INTEGER,
    num_pages INTEGER,
    status book_status NOT NULL DEFAULT 'available',
    condition book_condition NOT NULL DEFAULT 'good',
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    last_edited_at TIMESTAMPTZ
);


CREATE TABLE tags (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name VARCHAR UNIQUE NOT NULL,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE TABLE book_tags (
  book_id INTEGER REFERENCES books(id) ON DELETE CASCADE,
  tag_id INTEGER REFERENCES tags(id) ON DELETE CASCADE,
  created_at TIMESTAMPTZ NOT NULL DEFAULT (now()),
  PRIMARY KEY (book_id, tag_id)
);

CREATE TABLE users (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  cpf CHAR(11) UNIQUE NOT NULL,
  name VARCHAR(255) NOT NULL,
  email VARCHAR(255) UNIQUE,
  phone VARCHAR(20) UNIQUE,
  created_at TIMESTAMPTZ NOT NULL DEFAULT (now())
);

CREATE TABLE book_loans (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER NOT NULL REFERENCES users(id),
    book_id INTEGER NOT NULL REFERENCES books(id),
    loan_date TIMESTAMPTZ DEFAULT now(),
    due_date TIMESTAMPTZ NOT NULL,
    returned_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT (now())
);

CREATE INDEX idx_books_title_trgm
ON books USING gin (title gin_trgm_ops);

CREATE INDEX idx_authors_name_trgm
ON authors USING gin (name gin_trgm_ops);

CREATE INDEX idx_tags_name_trgm
ON tags USING gin (name gin_trgm_ops);

CREATE INDEX idx_books_author_id
ON books(author_id);

CREATE INDEX idx_book_tags_tag_id
ON book_tags(tag_id);

CREATE INDEX idx_book_loans_user_id
ON book_loans(user_id);

CREATE INDEX idx_book_loans_book_id
ON book_loans(book_id);