Enum "book_status" {
  "available"
  "loaned"
  "maintenance"
  "lost"
}

Enum "book_condition" {
  "good"
  "average"
  "poor"
}

Table "authors" {
  "id" INTEGER [pk, increment]
  "name" VARCHAR(255) [not null]
  "created_at" TIMESTAMPTZ [not null, default: `now()`]

  Indexes {
    name [type: gin, name: "idx_authors_name_trgm"]
  }
}

Table "books" {
  "id" INTEGER [pk, increment]
  "isbn" VARCHAR(255)
  "title" VARCHAR(255) [not null]
  "author_id" INTEGER [not null]
  "description" TEXT
  "publish_year" INTEGER
  "edition" INTEGER
  "num_pages" INTEGER
  "status" book_status [not null, default: 'available']
  "condition" book_condition [not null, default: 'good']
  "created_at" TIMESTAMPTZ [not null, default: `now()`]
  "last_edited_at" TIMESTAMPTZ

  Indexes {
    title [type: gin, name: "idx_books_title_trgm"]
    author_id [name: "idx_books_author_id"]
  }
}

Table "tags" {
  "id" INTEGER [pk, increment]
  "name" VARCHAR [unique, not null]
  "created_at" TIMESTAMPTZ [not null, default: `now()`]

  Indexes {
    name [type: gin, name: "idx_tags_name_trgm"]
  }
}

Table "book_tags" {
  "book_id" INTEGER
  "tag_id" INTEGER
  "created_at" TIMESTAMPTZ [not null, default: `now()`]

  Indexes {
    (book_id, tag_id) [pk]
    tag_id [name: "idx_book_tags_tag_id"]
  }
}

Table "users" {
  "id" INTEGER [pk, increment]
  "cpf" CHAR(11) [unique, not null]
  "name" VARCHAR(255) [not null]
  "email" VARCHAR(255) [unique]
  "phone" VARCHAR(20) [unique]
  "created_at" TIMESTAMPTZ [not null, default: `now()`]
}

Table "book_loans" {
  "id" INTEGER [pk, increment]
  "user_id" INTEGER [not null]
  "book_id" INTEGER [not null]
  "loan_date" TIMESTAMPTZ [default: `now()`]
  "due_date" TIMESTAMPTZ [not null]
  "returned_at" TIMESTAMPTZ
  "created_at" TIMESTAMPTZ [not null, default: `now()`]

  Indexes {
    user_id [name: "idx_book_loans_user_id"]
    book_id [name: "idx_book_loans_book_id"]
  }
}

Ref:"authors"."id" < "books"."author_id"

Ref:"books"."id" < "book_tags"."book_id" [delete: cascade]

Ref:"tags"."id" < "book_tags"."tag_id" [delete: cascade]

Ref:"users"."id" < "book_loans"."user_id"

Ref:"books"."id" < "book_loans"."book_id"
